# hsd

./: .gitignore  GEMINI.md  code_review.md  code_review.txt
hitsound-daw-wx/: CMakeLists.txt
hitsound-daw-wx/src/: Constants.h  main.cpp
hitsound-daw-wx/src/audio/: AudioEngine.cpp  AudioEngine.h  EventPlaybackSource.cpp  EventPlaybackSource.h  SampleRegistry.cpp  SampleRegistry.h
hitsound-daw-wx/src/io/: OsuParser.cpp  OsuParser.h  ProjectSaver.cpp  ProjectSaver.h
hitsound-daw-wx/src/model/: Command.cpp  Command.h  Commands.cpp  Commands.h  HitObject.cpp  HitObject.h  HotkeyManager.cpp  HotkeyManager.h  Project.h  ProjectValidator.cpp  ProjectValidator.h  SampleRef.h  SampleTypes.h  Track.h
hitsound-daw-wx/src/ui/: AddGroupingDialog.cpp  AddGroupingDialog.h  AddTrackDialog.cpp  AddTrackDialog.h  CreatePresetDialog.cpp  CreatePresetDialog.h  KeyCaptureDialog.cpp  KeyCaptureDialog.h  MainFrame.cpp  MainFrame.h  PresetDialog.cpp  PresetDialog.h  ProjectSetupDialog.cpp  ProjectSetupDialog.h  SettingsDialog.cpp  SettingsDialog.h  TimelineController.cpp  TimelineController.h  TimelineView.cpp  TimelineView.h  TrackList.cpp  TrackList.h  TransportPanel.cpp  TransportPanel.h  ValidationErrorsDialog.cpp  ValidationErrorsDialog.h
